--- a/pandas.ipynb
+++ b/pandas.ipynb
@@ -7,7 +7,7 @@
       },
       "source": [
         "## Pandas\n",
-        "Notebook cuyo objetivo es proporcionar una introducción sólida fundamentos de Numpy, sus aplicaciones en computación númerica, Machine Learning, Data Science, y un largo etcétera. Nos proporciona estructuras de datos eficientes para la manipulación de arreglos u otras operaciones propiamente matemáticas.\n"
+        "Notebook cuyo objetivo es proporcionar una introducción sólida fundamentos de Pandas, sus aplicaciones en computación númerica, Machine Learning, Data Science, y un largo etcétera. Nos proporciona estructuras de datos eficientes para la manipulación de arreglos u otras operaciones propiamente matemáticas.\n"
       ]
     },
     {
